--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>Rocketfy
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
